Assignment 1 klar push

--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "mau/labbar",
     "description": "Beskrivning",
     "require": {
-        "catfan/medoo": "^1.6",
+        "guzzlehttp/guzzle": "^6.3",
         "monolog/monolog": "^1.24"
     },
     "license": "BSD",
